--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>React Base</title>
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="style.css" rel="stylesheet"/>
   </head>
 
   <body style="margin:0;">
